# python_flask_rest_apis

./: README.md  README.rst  data.db
initial_rest_api/: app.py
initial_rest_api/templates/: index.html
jwt_extended/: README.rst  app.py
jwt_extended/models/: item.py  store.py  user.py
jwt_extended/resources/: item.py  store.py  user.py
restful_intro/: app.py  pyproject.toml
restful_intro/tests/: test_restful_intro.py
sql_storage/: app.py  create_tables.py  data.db  item.py  pyproject.toml  sql_test.py  user.py
sql_storage/tests/: test_sql_storage.py
using_sqlalchemy/: app.py  create_tables.py  data.db  security.py  user.py
using_sqlalchemy/models/: item.py  store.py  user.py
using_sqlalchemy/resources/: item.py  store.py  user.py
